--- a/inscricao.html
+++ b/inscricao.html
@@ -7,33 +7,36 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <section>
+    <section class="secao secao--hero">
       <div class="container">
-        <img
-          src="https://assets-global.website-files.com/61b9e0dd381626819c8d4f83/61f449266c92e6cb7fe98a43_LOGO%202%20(FINAL)%20V2%20(2).png"
-          alt="Logo hashtag"
-        />
         <img
           src="https://thunderous-eclair-ef442e.netlify.app/img/lira-dash.webp"
           alt="Imagem do Lira"
         />
-        <h1>Jornada Python da hashtag</h1>
-        <p>de 8 a 11 de Janeiro</p>
-        <ul>
-          <li>
-            Vire uma referência no Mercado de Trabalho por causa do Python;
-          </li>
-          <li>
-            4 dias para você aprender a programar do zero e se tornar mais
-            valorizado em qualquer empresa;
-          </li>
-          <li>
-            Construa 4 Projetos Completos e Passo a Passo: Análise de Dados,
-            Automação, Criação de Sites e Inteligência Artificial;
-          </li>
-        </ul>
-        <p>100% Online e Gratuito</p>
-        <button>Quero Participar</button>
+        <div class="caixa">
+          <img
+            src="https://assets-global.website-files.com/61b9e0dd381626819c8d4f83/61f449266c92e6cb7fe98a43_LOGO%202%20(FINAL)%20V2%20(2).png"
+            alt="Logo hashtag"
+            class="caixa__logo"
+          />
+          <h1 class="caixa__h1">Jornada Python da hashtag</h1>
+          <p class="caixa__subtitulo">de 8 a 11 de Janeiro</p>
+          <ul class="caixa__lista">
+            <li class="caixa__item-lista">
+              Vire uma referência no Mercado de Trabalho por causa do Python;
+            </li>
+            <li class="caixa__item-lista">
+              4 dias para você aprender a programar do zero e se tornar mais
+              valorizado em qualquer empresa;
+            </li>
+            <li class="caixa__item-lista">
+              Construa 4 Projetos Completos e Passo a Passo: Análise de Dados,
+              Automação, Criação de Sites e Inteligência Artificial;
+            </li>
+          </ul>
+          <p class="caixa__subtitulo">100% Online e Gratuito</p>
+          <button class="botao">Quero Participar!</button>
+        </div>
       </div>
     </section>
   </body>
