--- a/inscricao.html
+++ b/inscricao.html
@@ -9,10 +9,6 @@
   <body>
     <section class="secao secao--hero">
       <div class="container">
-        <img
-          src="https://thunderous-eclair-ef442e.netlify.app/img/lira-dash.webp"
-          alt="Imagem do Lira"
-        />
         <div class="caixa">
           <img
             src="https://assets-global.website-files.com/61b9e0dd381626819c8d4f83/61f449266c92e6cb7fe98a43_LOGO%202%20(FINAL)%20V2%20(2).png"
@@ -36,6 +32,13 @@
           </ul>
           <p class="caixa__subtitulo">100% Online e Gratuito</p>
           <button class="botao">Quero Participar!</button>
+        </div>
+        <div class="img-lira">
+          <img
+            src="https://thunderous-eclair-ef442e.netlify.app/img/lira-dash.webp"
+            alt="Imagem do Lira"
+            class="img"
+          />
         </div>
       </div>
     </section>
